Drafts and pictures

--- a/_posts/2020-06-06-hydra.md
+++ b/_posts/2020-06-06-hydra.md
@@ -64,11 +64,11 @@ the hydra can take free actions even while dazed or stunned, which is powerful
 because "bite everyone in reach" is a free action for them.
 
 The lore divergence above translates into a numbers divergence as well. MM
-hydras have no head-severing mechanics at all, and more hydras powerful hydras
-have more heads. MV hydras always start with four heads, and lose one each at
-75%, 50%, and 25% HP. At the start of the next turn after losing a head, two
-others grow in its place. This increases their number of attacks, but skilled
-PCs might prevent it from happening by means described in the hydra stat block.
+hydras have no head-severing mechanics at all, and more powerful hydras have
+more heads. MV hydras always start with four heads, and lose one each at 75%,
+50%, and 25% HP. At the start of the next turn after losing a head, two others
+grow in its place. This increases their number of attacks, but skilled PCs might
+prevent it from happening by means described in the hydra stat block.
 
 MM hydras also tend to have considerably more HP for their level, since they use
 the old math. That's another thing you should fix if you want to add them to
