--- a/_posts/2020-12-24-snake.md
+++ b/_posts/2020-12-24-snake.md
@@ -46,9 +46,9 @@ bite. That's it.
 ### Spitting Cobra (Monster Vault)
 
 The closest you'll get to a real snake here. Spitting Cobras are Small Natural
-Beasts, and Level 5 Minion Soldiers. Their **bite** does poison damage and marks for
-a turn, and their **Blinding Spittle** (ranged 5 vs. Reflex; recharge 4-6) does
-the same damage and blinds (save ends).
+Beasts, and Level 5 Minion Soldiers. Their **bite** does poison damage and marks
+for a turn, and their **Blinding Spittle** (ranged 5 vs. Reflex; recharge 4+)
+does the same damage and blinds (save ends).
 
 I could see an eccentric kobold artificer firing these out of a cannon, or a
 priest of Zehir summoning them out of thin air.
