--- a/_posts/2020-12-13-skeleton.md
+++ b/_posts/2020-12-13-skeleton.md
@@ -7,7 +7,7 @@ tags:
 ---
 
 {::nomarkdown}
-<figure class="left">
+<figure class="center">
   <img src="{{ "/assets/wir-mm-4e-skeleton.png" | absolute_url }}"/>
   <figcaption>
     Copyright 2008 Wizards of the Coast
