--- a/_posts/2020-12-27-specter.md
+++ b/_posts/2020-12-27-specter.md
@@ -7,7 +7,7 @@ tags:
 ---
 
 {::nomarkdown}
-<figure class="right">
+<figure class="center">
   <img src="{{ "/assets/wir-mm-4e-specter.png" | absolute_url }}"/>
   <figcaption>
     Copyright 2008 Wizards of the Coast
