--- a/_posts/2020-12-28-stirge.md
+++ b/_posts/2020-12-28-stirge.md
@@ -25,9 +25,9 @@ both in the Monster Manual and in the Vault.
 Stirges are another example of dangerous fantasy wildlife in the implied Fourth
 Edition setting. Looking like a cross between a large bat and a mosquito, these
 things feed on blood and will attack any nearby creature in search of it when
-hungry. While a mosquito can be dangerous because it transmit diseases, a stirge
-is large enough for the blood loss it causes to be worrying. A flock of them
-could exsanguinate an adult human in minutes.
+hungry. While a mosquito can be dangerous because it transmits diseases, a
+stirge is large enough for the blood loss it causes to be worrying. A flock of
+them could exsanguinate an adult human in minutes.
 
 Like bats, they nest in dark places and tend to hunt at night. They're a common
 enough threat that anti-stirge measures are a part of every culture. Ship crews,
