trolls trolls trolls

--- a/_posts/2021-01-09-troll.md
+++ b/_posts/2021-01-09-troll.md
@@ -39,7 +39,12 @@ get too hurt.
 
 I imagine this made trolls into dangerous puzzle monsters back when they were
 new, but now pretty much any D&D veteran is going to know about their
-weaknesses. If you have no other source of fire you can "kill" the troll with
+weaknesses. Many arcane characters have easy sources of fire or acid at hand,
+and other "caster" types might have an encounter power or two that deal those
+types of damage. If your wizard is one of those charop types that went all in on
+psychic and force spells, though, you're in for a tought fight.
+
+If you have no other source of fire you can "kill" the troll with
 conventional weapons and stick a lit torch in it to finish the job, but even
 that is easier said than done. And adventurers these days tend to prefer those
 alchemical glow-sticks as light sources, so they might not even have torches
