--- a/_posts/2021-02-19-worg.md
+++ b/_posts/2021-02-19-worg.md
@@ -41,7 +41,7 @@ and Darkvision.
 ### Worg
 
 {::nomarkdown}
-<figure class="left">
+<figure class="center">
   <img src="{{ "/assets/wir-mm-4e-worg.png" | absolute_url }}"/>
   <figcaption>
     Copyright 2008 Wizards of the Coast
@@ -60,7 +60,7 @@ range of its aura.
 ### Gulvoorg
 
 {::nomarkdown}
-<figure class="right">
+<figure class="center">
   <img src="{{ "/assets/wir-mm-4e-gulvorg.png" | absolute_url }}"/>
   <figcaption>
     Copyright 2008 Wizards of the Coast
@@ -94,3 +94,5 @@ Conceptually, I like worgs a lot more than I like dire wolves, and wouldn't be
 opposed to merging the two again. That way you get sapient evil worgs with the
 interesting mechanical bits of dire wolves. Maybe add some wind powers so they
 can huff, puff, and blow your house down.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
