--- a/_posts/2021-02-27-yuan-ti.md
+++ b/_posts/2021-02-27-yuan-ti.md
@@ -59,7 +59,7 @@ souls belong to no god.
 Slavery was the foundation upon which Zannad was built, and it fell when its
 innumerable slaves successfully rebelled against their masters. The yuan-ti of
 today are descended from those who survived Zannad's fall, and in their minds
-there is no great aspiration than to rebuild their former empire in all its
+there is no greater aspiration than to rebuild their former empire in all its
 cruel glory. The way the book describes it, they have a much better chance of
 achieving this goal than the giants.
 
