--- a/_posts/2021-02-28-zombie.md
+++ b/_posts/2021-02-28-zombie.md
@@ -10,7 +10,7 @@ tags:
 <figure class="center">
   <img src="{{ "/assets/wir-mm-4e-zombie.png" | absolute_url }}"/>
   <figcaption>
-    Definitely not a D&D illustration
+  Copyright 2008 Wizards of the Coast
   </figcaption>
 </figure>
 {:/nomarkdown}
