--- a/_posts/2021-03-27-angel.md
+++ b/_posts/2021-03-27-angel.md
@@ -10,7 +10,7 @@ tags:
 <figure class="center">
   <img src="{{ "/assets/wir-mm2-4e-angel.png" | absolute_url }}"/>
   <figcaption>
-    Copyright 2009 Wizards of the Coast
+    Illustration by Eric L. Williams. Copyright 2009 Wizards of the Coast
   </figcaption>
 </figure>
 {:/nomarkdown}
