--- a/_posts/2020-04-22-wraith.md
+++ b/_posts/2020-04-22-wraith.md
@@ -6,6 +6,19 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm2-4e-archons-storm.png" | absolute_url }}"/>
+  <figcaption>
+    Illustration by Steve Argyle. Copyright 2008 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+Looks like I missed this Monster Manual/Vault article due to a small typo when I
+named its draft. With this, the MM/MV reading is truly completed. Click
+[here][1] to see the other entries.
+
 Wraiths have been in the game since the beginning as a member of the Undead
 Power Ladder, where they were the logical progression from wights. Here, they
 appear in both the Monster Manual and the Vault.
@@ -226,3 +239,5 @@ the wraith entry, at least.
 Mechanically, you should absolutely use the MV versions instead of the ones in
 the Monster Manual. Level up the sovereign wraith and the figments if you need
 dread wraiths for the higher levels.
+
+[1]: {{ "/projects/mm-4e/" | relative_url }}
