--- a/_posts/2021-05-19-behir.md
+++ b/_posts/2021-05-19-behir.md
@@ -8,9 +8,9 @@ tags:
 
 {::nomarkdown}
 <figure class="right">
-  <img src="{{ "/assets/wir-mm-4e-behir.png" | absolute_url }}"/>
+  <img src="{{ "/assets/wir-mm2-4e-behir.png" | absolute_url }}"/>
   <figcaption>
-    Copyright 2008 Wizards of the Coast
+    Copyright 2009 Wizards of the Coast
   </figcaption>
 </figure>
 {:/nomarkdown}
