--- a/_posts/2021-05-29-centaur.md
+++ b/_posts/2021-05-29-centaur.md
@@ -158,7 +158,7 @@ ignores the mark and do thunder damage to them.
 
 A legendary commander and champion of the centaur people with decades of
 military experience. The campaigner is a Level 25 Soldier (Leader) with all
-standard centaur and a good deal of supernatural wind- and storm-themed
+standard centaur traits and a good deal of supernatural wind- and storm-themed
 abilities. It wears plate, and carries a shield and a longsword.
 
 The bonus charge damage of the **longsword** attack is thunder, and the
