--- a/_posts/2021-06-03-colossus.md
+++ b/_posts/2021-06-03-colossus.md
@@ -10,7 +10,7 @@ tags:
 <figure class="right">
   <img src="{{ "/assets/wir-mm2-4e-colossus.png" | absolute_url }}"/>
   <figcaption>
-    Copyright 2008 Wizards of the Coast
+    Art by Brian Valenzuela. Copyright 2009 Wizards of the Coast.
   </figcaption>
 </figure>
 {:/nomarkdown}
