Couatl and Cyclops

--- a/_posts/2021-06-06-cyclops.md
+++ b/_posts/2021-06-06-cyclops.md
@@ -8,9 +8,9 @@ tags:
 
 {::nomarkdown}
 <figure class="center">
-  <img src="{{ "/assets/wir-mm2-4e-couatl.png" | absolute_url }}"/>
+  <img src="{{ "/assets/wir-mm2-4e-cyclops.png" | absolute_url }}"/>
   <figcaption>
-    Copyright 2008 Wizards of the Coast
+    Art by Chippy. Copyright 2009 Wizards of the Coast.
   </figcaption>
 </figure>
 {:/nomarkdown}
