--- a/_posts/2021-06-06-couatl.md
+++ b/_posts/2021-06-06-couatl.md
@@ -10,7 +10,7 @@ tags:
 <figure class="right">
   <img src="{{ "/assets/wir-mm2-4e-couatl.png" | absolute_url }}"/>
   <figcaption>
-    Copyright 2008 Wizards of the Coast
+    Art by Eva Widermann. Copyright 2009 Wizards of the Coast.
   </figcaption>
 </figure>
 {:/nomarkdown}
