--- a/_posts/2021-06-24-demons-03.md
+++ b/_posts/2021-06-24-demons-03.md
@@ -233,3 +233,5 @@ opposition, since you want them to die fast and provide that damage bonus.
 ## End of Part 3
 
 There's one more to go, with the last remaining demon.
+
+[1]: {{ "/projects/mm2-4e/" | relative_url }}
