--- a/_posts/2021-06-24-demons-04.md
+++ b/_posts/2021-06-24-demons-04.md
@@ -104,3 +104,5 @@ to her worshippers. Because despite all the dedication the drow people lavishes
 on her, Lolth doesn't trust them.
 
 That's kinda tragic, for both the Drow and for Lolth.
+
+[1]: {{ "/projects/mm2-4e/" | relative_url }}
