Three more monster posts

--- a/_posts/2021-07-11-devils-02.md
+++ b/_posts/2021-07-11-devils-02.md
@@ -234,4 +234,4 @@ the front-line, or attaching the devil to a mixed-party of yuan-ti.
 
 That's it for the devils in this book, but we're not out of the D's yet.
 
-[1]: {{ "/projects/mm-4e/" | relative_url }}
+[1]: {{ "/projects/mm2-4e/" | relative_url }}
