--- a/_posts/2021-07-28-dragon.md
+++ b/_posts/2021-07-28-dragon.md
@@ -11,10 +11,10 @@ chromatic dragons, which are the classic draconic opponents, and now the second
 one talks about the metallics.
 
 The earliest metallic dragons were the Golds, who appeared alongside the
-chromatic set in BECMI and might have been around even earlier than that. AD&D
-1st Edition had a whole set in its Monster Manual. Here, we're going to look at
-a slightly different set. This is an introductory post, with the next handful of
-them each covering a different "color" of dragon.
+chromatic set in AD&D 1st Edition and might have been around even earlier than
+that. Here, we're going to look at a slightly different set. This is an
+introductory post, with the next handful of them each covering a different
+"color" of dragon.
 
 ## The Lore
 
