--- a/_posts/2021-08-04-drakes.md
+++ b/_posts/2021-08-04-drakes.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm2-4e-drakes.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This is part of a series! Go [here][1] to see the other entries.
+
 Drakes make their debut on the first 4e Monster Manual, and this entry brings us
 a few more of them. They remain a popular choice of animal for domestication but
 the intro text mentions they retain a wild side.
@@ -115,5 +126,5 @@ dinosaurs if you're so inclined, but making them a distinct type of creature
 also frees the authors (and you!) from having to adhere to best paleontological
 practices.
 
-
+[1]: {{ "/projects/mm2-4e/" | relative_url }}
 [2]: {{ "/2020/02/01/drakes.html" | relative_url }}
