--- a/_posts/2019-12-15-succubus.md
+++ b/_posts/2019-12-15-succubus.md
@@ -67,7 +67,7 @@ Succubi are Level 9 Controllers with 90 HP. They have ground and fly speeds of
 A succubus can Change Shape as a minor action, altering its physical form to
 that of any Medium humanoid until it decides to change again or drops to 0
 HP. It can duplicate any specific individual that fits that category and whom it
-has seen before. Noticing the deception requires passing a CD 30 Insight check
+has seen before. Noticing the deception requires passing a DC 30 Insight check
 according to the MV.
 
 Going by the difficulty table, that's considered a Hard check for Level 15
