--- a/_posts/2021-08-06-duergar.md
+++ b/_posts/2021-08-06-duergar.md
@@ -15,6 +15,8 @@ tags:
 </figure>
 {:/nomarkdown}
 
+This is part of a series! Go [here][1] to see the other entries.
+
 Chronologically, the first appearance of Duergar in 4e is in the Monster Manual
 2, but they were also in the Monster Vault so we covered their basic lore
 [here][2]. In this post, we'll covered the duergar that appeared in the MM2 but
@@ -185,4 +187,5 @@ That sure is a lot of duergar, and it further increases the variety and level
 range of the available opposition if you want your PCs to go up against a whole
 fortress full of them.
 
+[1]: {{ "/projects/mm2-4e" | relative_url }}
 [2]: {{ "/2020/02/10/duergar.html" | relative_url }}
