--- a/_posts/2021-08-17-firbolg.md
+++ b/_posts/2021-08-17-firbolg.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm2-4e-firbolg.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the other entries.
+
 Firbolgs are inspired by Celtic myth, and I'm sure they must have appeared in
 earlier editions in some form. I think their 4e presentation in this book is
 new, though.
@@ -223,4 +234,5 @@ inclined to trust people who claim to be champions of good than they are anyone
 else, and try to stay out of those particular cosmic struggles.
 
 
+[1]: {{ "/projects/mm-4e/" | relative_url }}
 [2]: {{ "/2020/05/30/hound.html" | relative_url }}
