--- a/_posts/2021-08-31-giants.md
+++ b/_posts/2021-08-31-giants.md
@@ -15,7 +15,7 @@ The Monster Manual 2 added more giants, and it's actually where Frost Giants
 made their first appearance in this edition. We already covered them in the
 corresponding post linked above. In this one, we'll cover the two other
 varieties introduced in the same entry: Eldritch and Stone giants. The latter
-are old standbys, and I had never heard of the formed until now. If they existed
+are old standbys, and I had never heard of the former until now. If they existed
 in a previous edition, it was in one of the more out-of-the-way supplements or
 Dragon articles for 3e.
 
