--- a/_posts/2021-09-16-golem.md
+++ b/_posts/2021-09-16-golem.md
@@ -18,6 +18,15 @@ examples here is Huge.
 
 ## Bone Golem
 
+{::nomarkdown}
+<figure class="left">
+  <img src="{{ "/assets/wir-mm2-4e-golem-bone.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 Bone golems are made from the skeletons of several creatures, whose bones are
 sharpened and fitted together to form the construct's body. Despite being made
 of bones and beloved of necromancers, it's a construct animated through
@@ -40,6 +49,15 @@ attack. If Bone Spurs is charged then it uses that, otherwise it makes a basic
 bone spur attack.
 
 ## Chain Golem
+
+{::nomarkdown}
+<figure class="right">
+  <img src="{{ "/assets/wir-mm2-4e-golem-chain.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
 
 These Huge golems are modeled after chain devils, and are often tasked to guard
 prisons and Actual Dungeons instead of the usual tombs or treasure vaults. As
@@ -69,6 +87,15 @@ away and using ranged attacks is a good tactic against them, but that speed of 8
 will make keeping away a real chore.
 
 ## Clay Golem
+
+{::nomarkdown}
+<figure class="left">
+  <img src="{{ "/assets/wir-mm2-4e-golem-clay.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
 
 Clay Golems were one of the original golem types described in the first entries
 back in AD&D or in the nebulous times before it. They were originally inspired
