--- a/_posts/2021-09-28-goliath.md
+++ b/_posts/2021-09-28-goliath.md
@@ -18,6 +18,15 @@ angels. Goliaths do it for giants.
 
 ## The Lore
 
+{::nomarkdown}
+<figure class="left">
+  <img src="{{ "/assets/wir-mm2-4e-goliath.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 The typical goliath is stated to be between 7 and 8 feet tall, so whether
 they're on the large side of Medium or the small side of Large is a matter of
 opinion. The book's opinion is that they're Medium, since that allows them to be
