--- a/_posts/2021-10-02-half-elf.md
+++ b/_posts/2021-10-02-half-elf.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm2-4e-half-elf.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 Half-elves have been a part of D&D since races were first separated from classes
 back in AD&D 1st Edition. I guess they might have been inspired by Elrond from
 Lord of the Rings, who was said to be a half-elf. They appeared as a playable
