--- a/_posts/2021-10-04-half-orc.md
+++ b/_posts/2021-10-04-half-orc.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm2-4e-half-orc.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 Half-Orcs have been in the game since the days of AD&D, where they appeared as a
 playable option in the Player's Handbook. Historically, they were one of the
 first "edgy" options for players, but they've always been a bit controversial
