--- a/_posts/2021-10-08-hawk.md
+++ b/_posts/2021-10-08-hawk.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm2-4e-hawk.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 Hawks are real world animals, and though they are birds of prey they're fairly
 small and don't usually attack people. For these reasons, 4e doesn't consider
 them "monster material", and this entry focuses on supernatural hawks that can
