--- a/_posts/2021-10-15-human.md
+++ b/_posts/2021-10-15-human.md
@@ -43,6 +43,15 @@ but it really should have this ability.
 
 ## Human Diabolist
 
+{::nomarkdown}
+<figure class="left">
+  <img src="{{ "/assets/wir-mm2-4e-human-diabolist.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 A warlock-type who's in tight with the forces of Hell, and wields
 fire-and-brimstone themed magic to achieve their Evil ends.
 
@@ -113,6 +122,15 @@ team up with either other assassins, or with some distracting heavies.
 
 ## Human Gladiator
 
+{::nomarkdown}
+<figure class="right">
+  <img src="{{ "/assets/wir-mm2-4e-human-gladiator.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 This gladiator is described by the book as a "consumate athlete", which isn't
 really the term I'd use to refer to someone forced to fight in deathmatches for
 the amusement of a bloodthirsty crowd. Still, some of them might end up
@@ -145,6 +163,15 @@ good sense.
 
 ## Human Hexer
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm2-4e-human-hexer.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 Perfect for playing the part of a sinister witch or a seer whose dire prophecies
 go unheard. The hexer is a Level 7 Controller with 77 HP, wearing robes and
 wielding a staff.
@@ -171,6 +198,15 @@ include basic attacks, so your Slayer won't turn into a surprisingly deadly
 frog.
 
 ## Human Insane Noble
+
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm2-4e-human-insane-noble.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
 
 Not to be confused with the standard Human Noble, shown later. The picture is
 pretty much a caricature of Carlota Joaquina, a historical figure who was rather
@@ -290,6 +326,15 @@ Their tactics section says they like to stay near the water or near the edge of
 the boat if this is a boarding action, but I see no reason for this.
 
 ## Human Pirate Captain
+
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm2-4e-human-pirate-captain.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
 
 Double Yarrr! The captain is a Level 10 Soldier with the Leader keyword and 104
 HP. It's clearly meant to be used alongside a bunch of Pirates and perhaps a
