--- a/_posts/2021-10-17-hydra.md
+++ b/_posts/2021-10-17-hydra.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm2-4e-human-hydra.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 Hydras made their 4e debut in the first Monster Manual, and here we get a few
 more of them. Their basic lore remains the same and you can check it out on the
 [original post][2] I made on the subject.
@@ -108,15 +117,15 @@ a -2 penalty to all defenses; and **Venom Tooth**, which inflicts ongoing 10
 poison damage.
 
 Thematically this hydra is all over the place, but that's the point. It's hard
-for PCs to protect themselves against everything it can do.
+for PCs to protect themselves from everything it can do.
 
 ## Sample Encounters and Final Impressions
 
 Hydras are solitary, so you will usually only find one of them at a
 time. However, they're also frequently followed by opportunistic scavengers who
 feed on the remains of their meals and who might be impatient enough to give
-them a bit of help with killing it. Examples given are carrion crawlers and
-shardstorm vortex elementals.
+them a bit of help with killing those meals. Examples given are carrion crawlers
+and shardstorm vortex elementals.
 
 Occasionally, a powerful character might be able to capture a hydra for use as a
 guardian. The example encounter given is for this scenario, with a razor hydra
