--- a/_posts/2021-10-24-kenku.md
+++ b/_posts/2021-10-24-kenku.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm2-4e-kenku.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 Kenku are raven-people, humanoid and human-sized but covered in feathers and
 with raven heads. They organize themselves into clan-like groups called
 flocks. Your typical kenku flock is tightly knit but very distrustful of
