--- a/_posts/2021-10-24-krenshar.md
+++ b/_posts/2021-10-24-krenshar.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm2-4e-krenshar.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 I first saw a krenshar in the 3e Monster Manual, though it's possible they
 originated a bit earlier than that.
 
