--- a/_posts/2021-10-25-musings.md
+++ b/_posts/2021-10-25-musings.md
@@ -15,7 +15,7 @@ One of these days, I really want to run something like that using LANCER. As of
 this writing I definitely don't have the bandwidth for it, but I just thought it
 would be nice to write it down.
 
-## LANCER: Agains the Giants
+## LANCER: Against the Giants
 
 Armies of Giants invade, out of nowhere and for seemingly no reason!
 
