--- a/_posts/2021-10-25-musings.md
+++ b/_posts/2021-10-25-musings.md
@@ -1,5 +1,5 @@
 ---
-layout: posts
+layout: post
 title: "Thoughts on LANCER Against the Giants"
 tags:
     - lancer
@@ -9,7 +9,7 @@ tags:
 
 I remember reading a few play reports about a campaign titled "Mecha Against the
 Giants" a few years ago. It was run by Mark Langsdorf, using GURPS as a rule
-system, and it was vaguely inspired by the Agains the Giants modules for AD&D.
+system, and it was vaguely inspired by the Against the Giants modules for AD&D.
 
 One of these days, I really want to run something like that using LANCER. As of
 this writing I definitely don't have the bandwidth for it, but I just thought it
