All of the MM2 M's

--- a/_posts/2021-11-11-marut.md
+++ b/_posts/2021-11-11-marut.md
@@ -7,6 +7,15 @@ tags:
 ---
 
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm2-4e-marut.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 Fourth edition Maruts debuted in the [first Monster Manual][2], as enigmatic
 mercenaries from the Astral Sea that demanded future favors as payment for their
 services and kept detailed ledgers of these in their astral fortresses. Here we
