--- a/_posts/2021-11-11-mammoth.md
+++ b/_posts/2021-11-11-mammoth.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm2-4e-mammoth.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 Cribbing from paleonthology is one of the classic ways to add interesting
 monsters to your D&D world. Dinosaurs are the obvious choice, but there's also a
 bunch of post-dinosaur megafauna that can be slotted in with no problem at
