--- a/_posts/2021-11-11-myconid.md
+++ b/_posts/2021-11-11-myconid.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm2-4e-myconid.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 Myconids have been in the game since AD&D as one of its most famous "novelty
 humanoids". They make their 4e debut here in the MM2.
 
