--- a/_posts/2021-11-11-mammoth.md
+++ b/_posts/2021-11-11-mammoth.md
@@ -47,7 +47,7 @@ feet in combat.
 The tusks are Reach 2 and can either **gore** as a basic attack or perform a
 **Tusk Toss** (recharge 4+) that targets Fortitude, does a little less damage
 and slides the target 5 squares. At the end of the slide the target falls from a
-height of 30 feed on the destination square, so it really is a toss. The fall
+height of 30 feet on the destination square, so it really is a toss. The fall
 does damage (and can be mitigated) according to the standard rules for falling.
 
 The feet can **stamp**, a Reach 1 attack that targets fortitude, does about same
