--- a/_posts/2021-11-19-neogi.md
+++ b/_posts/2021-11-19-neogi.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm2-4e-neogi.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 I believe the Neogi first appeared as an element of 2e's Spelljammer setting. In
 4e, they make their debut here in the MM2.
 
