--- a/_posts/2020-03-30-giants.md
+++ b/_posts/2020-03-30-giants.md
@@ -92,7 +92,7 @@ Storm. Each type presents one or more giant stat blocks and one Titan.
 That first category includes Hill Giants - Stone giants also exist and fall
 under Earth, but don't appear in the first Monster Manual or on the Vault.
 
-The first three rungs of this ladder comprise the Agains the Giants set, which
+The first three rungs of this ladder comprise the Against the Giants set, which
 means those modules could make a fine Paragon-tier campaign for 4e.
 
 [1]: {{ "/projects/mm-4e/" | relative_url }}
