--- a/_posts/2021-12-13-remorhaz.md
+++ b/_posts/2021-12-13-remorhaz.md
@@ -27,6 +27,15 @@ succeed.
 
 ## The Numbers
 
+{::nomarkdown}
+<figure class="left">
+  <img src="{{ "/assets/wir-mm2-4e-remorhaz.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 Remorhazes are Huge Elemental Beasts, and Level 21 Elite Brutes with 480 HP. It
 has low-light vision and projects an aura (2) of **Blistering Heat** that does
 10 fire damage to any creature caught inside. It runs at speed 6 and burrows at
