Add links to project page

--- a/_posts/2021-12-13-remorhaz.md
+++ b/_posts/2021-12-13-remorhaz.md
@@ -6,6 +6,8 @@ tags:
     - lets-read
 ---
 
+This post is part of a series! Click [here][1] to see the rest.
+
 I first encountered remorhazes in the 3e Monster Manual, though I guess they've
 been around since AD&D.
 
@@ -85,3 +87,5 @@ sorts, accompanied by a remorhaz and a rime hound.
 I confess that I had a bit of a hard time distinguishing between a remorhaz and
 a behir in earlier editions. The distinction is clearer to me now, but only
 because I spent some time studying their entries in detail.
+
+[1]: {{ "/projects/mm2-4e/" | relative_url }}
