Shadar-kai and Sharks

--- a/_posts/2021-12-17-shark.md
+++ b/_posts/2021-12-17-shark.md
@@ -15,6 +15,8 @@ tags:
 </figure>
 {:/nomarkdown}
 
+This article is part of a series! Click [here][1] to see the rest.
+
 Sharks are are real-world animals, and this Monster Manual 2 entry is their
 debut on D&D Fourth Edition. The [Sahuagin][2] entry from the first Monster
 Manual mentioned them a lot but that book didn't have shark stats. The Monster
@@ -94,4 +96,5 @@ We get one sample encounter here:
   village. They'd stay a bit further away from the front lines, and engaging
   them might be necessary to end the raid.
 
+[1]: {{ "/projects/mm2-4e/" | relative_url }}
 [2]: {{ "/2020/11/11/sahuagin.html" | relative_url }}
