--- a/_posts/2022-01-05-slaad.md
+++ b/_posts/2022-01-05-slaad.md
@@ -6,6 +6,8 @@ tags:
     - lets-read
 ---
 
+This article is part of a series! Click [here][1] to see the rest.
+
 Slaads already made their 4e debut in the first Monster Manual, and you can
 check out the post I wrote on them [here][2]. This MM2 entry brings us a
 lower-level, less-popular slaad type and an alternate mechanic for the horrific
@@ -126,5 +128,5 @@ Our two sample encounters are:
 
 
 
-
+[1]: {{ "/projects/mm2-4e/" | relative_url }}
 [2]: {{ "/2020/12/23/slaad.html" | relative_url }}
