--- a/_posts/2022-01-05-slaad.md
+++ b/_posts/2022-01-05-slaad.md
@@ -19,7 +19,7 @@ slaad spawning cycle.
 <figure class="left">
   <img src="{{ "/assets/wir-mm2-4e-slaad-flux.png" | absolute_url }}"/>
   <figcaption>
-    Illustration by Wayne England. Copyright 2009 Wizards of the Coast.
+    Copyright 2009 Wizards of the Coast.
   </figcaption>
 </figure>
 {:/nomarkdown}
