--- a/_posts/2022-01-19-sphinx.md
+++ b/_posts/2022-01-19-sphinx.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm2-4e-sphinx.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 Sphinxes already made their 4e debut on the [Monster Manual][2], and the MM2
 gives us an additional variant.
 
