--- a/_posts/2022-01-20-spider.md
+++ b/_posts/2022-01-20-spider.md
@@ -20,6 +20,16 @@ allies".
 
 ## Bristle Spider
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm2-4e-spider-bristle.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+
 These elephant-sized arachnids were originally bred by oni to serve as their
 mounts. In our narrative present, several other peoples have adopted them as
 well. Their biggest fans are the ettercap and the drow, neither of which have
@@ -53,6 +63,15 @@ The sample encounter is level 14 and has a bristle spider acting as a palanquin
 for a drow priestess and her drow blademaster bodyguard.
 
 ## Phase Spider
+
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm2-4e-spider-phase.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
 
 A returning classic, Phase Spiders have undergone some changes to account for
 the absence of an Ethereal plane in 4e. Here, they're fey spiders with innate
@@ -89,6 +108,15 @@ pack of three trained phase spiders.
 
 ## Tomb Spider
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm2-4e-spider-tomb.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 These rotund arachnids are a Shadowfell species that has particularly strong
 incentives to seek out passages into the world. Their lifecycle requires them to
 lay eggs inside corpses, so they seek out crypts and graveyards for use as
@@ -117,6 +145,16 @@ battle wights and 3 cultists to battle, using the tomb spider as armored
 support.
 
 ## Tomb Spider Broodswarm
+
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm2-4e-spider-tomb-broodswarm.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 
 This is a swarm of tiny tomb spiders that has just burst out of their corpse
 nest. It's a Medium Shadow Beast (Swarm), and counts as a Level 10 Lurker with
