--- a/_posts/2022-02-01-spriggan.md
+++ b/_posts/2022-02-01-spriggan.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm2-4e-spriggan.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 I can't find spriggans in my 2nd edition and earlier books, but I know they're
 in Pathfinder, so they were probably introduced in D&D 3.x. This entry is their
 4e debut. It feels like there's been some condensing here because this entry
