--- a/_posts/2022-02-01-spriggan.md
+++ b/_posts/2022-02-01-spriggan.md
@@ -15,6 +15,8 @@ tags:
 </figure>
 {:/nomarkdown}
 
+This article is part of a series! Click [here][1] to see the rest.
+
 I can't find spriggans in my 2nd edition and earlier books, but I know they're
 in Pathfinder, so they were probably introduced in D&D 3.x. This entry is their
 4e debut. It feels like there's been some condensing here because this entry
@@ -156,3 +158,6 @@ their settlements for protection.
 
 The sample encounter is level 9: an evil eladrin twilight incanter with a pet
 shambling mound and a quartet of spriggan goons (2 giantsouls, 2 witherers).
+
+[1]: {{ "/projects/mm2-4e/" | relative_url }}
+[2]: {{ "/2020/04/21/gnome.html" | relative_url }}
