--- a/_posts/2022-02-01-sprite.md
+++ b/_posts/2022-02-01-sprite.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="right">
+  <img src="{{ "/assets/wir-mm2-4e-sprite-swarm.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This article is part of a series! Click [here][1] to see the rest.
+
 Sprites are super-tiny humanoid fey, tinier even than the pixies that would show
 up as a playable option in _Heroes of the Feywild_. I think they've been in the
 game since at least AD&D 1st Edition in some for or another.
@@ -61,11 +72,12 @@ blindsight.
 
 You can model a larger group of umbral sprites by using several swarms in an
 encounter, or by increasing the level and size of a single one. They also make
-me think about adapting [The Dreams of Ruin][3] to 4e, because they look like
+me think about adapting [The Dreams of Ruin][2] to 4e, because they look like
 they are the base creature for Murdersprites. A murdersprite swarm is probably
 more like a Colossal Level 14-18 Brute, though.
 
 The sample encounter is Level 5, and is a grab-bag of Feywild hazards: 2
 ettercap fang guards working with 2 sprite swarms and 2 fey panthers.
 
+[1]: {{ "/projects/mm2-4e/" | relative_url }}
 [2]: https://www.drivethrurpg.com/product/152691/The-Dreams-of-Ruin
