--- a/_posts/2022-02-18-tiger.md
+++ b/_posts/2022-02-18-tiger.md
@@ -6,6 +6,16 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm2-4e-tiger.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+
 Tigers are real animals and have been part of the game since its
 beginnings. They're some of the only animals whose "mundane" version was
 considered worthy of a monster stat block at this point in the edition.
@@ -32,7 +42,7 @@ combatant that gets separated from the rest.
 
 Dire tigers are as usual larger, stronger and spikier. They're bolder and less
 opportunistic, directly stalking prey that seems to be alone and weaker than
-then. Their behavior is a lot closer to that of the tiger in _The Jungle Book_
+them. Their behavior is a lot closer to that of the tiger in _The Jungle Book_
 than that of a real-world animal.
 
 ## The Numbers
