--- a/_posts/2022-02-18-tiger.md
+++ b/_posts/2022-02-18-tiger.md
@@ -16,6 +16,8 @@ tags:
 {:/nomarkdown}
 
 
+This post is part of a series! Click [here][1] to see the rest.
+
 Tigers are real animals and have been part of the game since its
 beginnings. They're some of the only animals whose "mundane" version was
 considered worthy of a monster stat block at this point in the edition.
@@ -104,3 +106,5 @@ We have two sample encounters here:
 - A weretiger running with a pack/harem of three dire tigers. The fact that you
   have tigers running in packs should be a hint that there's something unnatural
   going on.
+
+[1]: {{ "/projects/mm2-4e/" | relative_url }}
