--- a/_posts/2022-02-18-troll.md
+++ b/_posts/2022-02-18-troll.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm2-4e-troll.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the rest.
+
 In a situation that has been common in this reading, we're in a halfway place
 when it comes to trolls. The Monster Manual marks their debut in this edition,
 and the Monster Vault gives us a final selection of updated stat blocks. Here in
@@ -112,4 +123,5 @@ We get three encounters:
   terrain, but so will everyone else. The destrachan offers some artillery
   support and can stay far away from the thorn zones.
 
+[1]: {{ "/projects/mm2-4e/" | relative_url }}
 [2]:  {{ "/2021/01/09/troll.html" | relative_url }}
