Vs and Ws for the MM2 Let's Read

--- a/_posts/2022-03-08-wood-woad.md
+++ b/_posts/2022-03-08-wood-woad.md
@@ -21,10 +21,10 @@ ones. So even if you're careful with the environment and try to approach them
 peacefully, they'll still try to kill you because some fool cut a tree down
 years ago and managed to run away.
 
-Wood woads tend to ally with other creatures who also sworn protectors of
-nature, like dryads, centaurs and some elves or other fey. So I guess you could
-still deal with them peacefully if you manage to approach those allies first and
-get them to vouch for you, or have them act as intermediaries.
+Wood woads tend to ally with other sworn protectors of nature, like dryads,
+centaurs and some elves or other fey. So I guess you could still deal with them
+peacefully if you manage to approach those allies first and get them to vouch
+for you, or have them act as intermediaries.
 
 ## The Numbers
 
@@ -43,8 +43,7 @@ the same amount of HP.
 The Reliable keyword means this power isn't used up if the attack misses. The
 wood woad can keep trying to use it until it hits someone, and only them will it
 need to make recharge rolls. This attack becomes more useful if all of the wood
-woad's allies are either plants or fey... not that it has any reason to team up
-with anyone else.
+woad's allies are either plants or fey.
 
 Once per encounter it can also curse someone with **Nature's Mystery** as a
 minor action. This inflicts a -2 penalty on all of the target's attacks,
