--- a/_posts/2022-03-08-wood-woad.md
+++ b/_posts/2022-03-08-wood-woad.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm2-4e-wood-woad.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Go [here][1] to see the other entries.
+
 I think I remember seeing mention of Wood Woads in AD&D somewhere, but I
 couldn't find them in my books. This is their 4e debut.
 
@@ -80,3 +91,5 @@ druids, and so on).
 
 If you want to use the wood woad stat block but don't want to say they're a
 completely separate species, just say they're small treants instead.
+
+[1]: {{ "/projects/mm2-4e/" | relative_url }}
