--- a/_posts/2022-04-05-xorn.md
+++ b/_posts/2022-04-05-xorn.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm2-4e-xorn.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2009 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Go [here][1] to see the other entries.
+
 I see xorns in my copy of the AD&D 1st Edition monster manual, so they date from
 at least that far back. This is their 4e debut, and they're the last monster in
 the book.
@@ -77,3 +88,5 @@ a troop of duergar.
 
 I'm happy to see xorns here. Their weird looks make them an iconic D&D monster
 in my mind. A nice way to close the book.
+
+[1]: {{ "/projects/mm2-4e/" | relative_url }}
