--- a/_posts/2022-05-09-arcanian.md
+++ b/_posts/2022-05-09-arcanian.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-ape.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This is part of a series! Go [here][1] to see the other entries.
+
 I don't remember seeing arcanians anywhere else before, though they do have that
 "late-3e feeling" to them.
 
@@ -106,3 +117,5 @@ they need to pass through on their perilous journey.
 Sprinkle in journal entries that hint at the disaster that destroyed the place,
 and add a big lich with multiple elemental attacks as the "end boss". And there
 you have it, an instant Dark Souls level for your 4e table.
+
+[1]: {{ "/projects/mm3-4e/" | relative_url }}
