--- a/_posts/2022-05-09-arcanian.md
+++ b/_posts/2022-05-09-arcanian.md
@@ -8,7 +8,7 @@ tags:
 
 {::nomarkdown}
 <figure class="center">
-  <img src="{{ "/assets/wir-mm3-4e-ape.png" | absolute_url }}"/>
+  <img src="{{ "/assets/wir-mm3-4e-arcanian.png" | absolute_url }}"/>
   <figcaption>
     Copyright 2010 Wizards of the Coast
   </figcaption>
