--- a/_posts/2017-01-26-minions.md
+++ b/_posts/2017-01-26-minions.md
@@ -40,16 +40,16 @@ time I saw it explicitly named and codified was with Exalted and its rules for
 Extras, though it almost certainly wasn't the first system to do so. Many others
 tried their hand at it, including D&D 4th Edition with its Minion rules.
 
-GURPS itself multiple sets of minion rules. In the core book, each minion is an
-individual opponent: they always go down in one hit, and they never use Active
-Defenses (but also never All-Out-Attack either). **GURPS Action** and **GURPS
-Dungeon Fantasy** toughen them up a bit by allowing active defenses and allowing
-for several different grades of opposition. _Swarms_ are large groups of
-"minions" treated like a single, abstract creature, and again we have a version
-in the **Basic Set** and a couple more elaborate ones in **Dungeon Fantasy** and
-other sources. I'm sure people have come up with their own variations as
-well. So here's mine! It's focused on distinct individuals rather than on
-swarms. For now, I'll use the standard published rules for those.
+GURPS itself has multiple sets of minion rules. In the core book, each minion is
+an individual opponent: they always go down in one hit, and they never use
+Active Defenses (but also never All-Out-Attack either). **GURPS Action** and
+**GURPS Dungeon Fantasy** toughen them up a bit by allowing active defenses and
+allowing for several different grades of opposition. _Swarms_ are large groups
+of "minions" treated like a single, abstract creature, and again we have a
+version in the **Basic Set** and a couple more elaborate ones in **Dungeon
+Fantasy** and other sources. I'm sure people have come up with their own
+variations as well. So here's mine! It's focused on distinct individuals rather
+than on swarms. For now, I'll use the standard published rules for those.
 
 ## Octopus Opposition
 
