--- a/_posts/2022-05-22-cambion.md
+++ b/_posts/2022-05-22-cambion.md
@@ -144,5 +144,5 @@ Cambions are... okay I guess? The mechanics in this entry are interesting, but
 the lore doesn't quite get me going. I feel I can make some use of the infernal
 scion, but the others don't make stories jump to my mind just from reading them.
 
-[1]: {{ "/projects/mm3-4e.html" | relative_url }}
+[1]: {{ "/projects/mm3-4e" | relative_url }}
 [2]: {{ "/2019/07/25/cambion.html" | relative_url }}
