--- a/_posts/2022-05-26-chitine.md
+++ b/_posts/2022-05-26-chitine.md
@@ -6,6 +6,18 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-chitine.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the others.
+
+
 Chitines feel like a late-3e addition to the game, and likely had slightly
 different lore back then.
 
@@ -186,4 +198,5 @@ such a campaign they would make good heroic tier opponents for GMs who dislike
 manually adjusting monster levels, since drow are by default paragon tier.
 
 
+[1]: {{ "/projects/mm3-4e" | relative_url }}
 [2]: {{ "/2021/06/24/demons-04.html" | relative_url }}
