--- a/_posts/2022-05-30-cloaker.md
+++ b/_posts/2022-05-30-cloaker.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-cloaker.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the others.
+
 Cloakers are an old D&D standby, originating back in the days of AD&D 1st
 Edition where they belonged to a category of monsters that looked like
 furniture.
@@ -86,3 +97,5 @@ increase from 2 to 5 when the creature is bloodied.
 
 The Envelop ability is kinda frightening, but I guess my impression of cloakers
 remains the same it's always been: meh.
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
