--- a/_posts/2022-05-30-craud.md
+++ b/_posts/2022-05-30-craud.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-craud.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the others.
+
 I think crauds are a new monster. At the very least they're one I haven't met
 before.
 
@@ -120,3 +131,5 @@ handy adventure hook built right into the monster entry.
 I'm sure you could complete the lineup seen here with custom-made artillery
 crauds that fire high-pressure water jets. Or maybe you could use the
 "controlled by pirates" angle to pair them up with pirate musketeers.
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
