--- a/_posts/2022-06-01-dark-one.md
+++ b/_posts/2022-06-01-dark-one.md
@@ -6,8 +6,10 @@ tags:
     - lets-read
 ---
 
+This post is part of a series! Click [here][1] to see the others.
+
 Dark Ones appeared in the first 4e Monster Manual, and you can read my take on
-that book's entry [here][1]. This entry adds a few more stat blocks and tries to
+that book's entry [here][2]. This entry adds a few more stat blocks and tries to
 fill in the lore gaps.
 
 ## The Lore
@@ -52,7 +54,7 @@ Vecna and other appreciators of the sneaky-stabby arts.
 
 And of course, if you want to tone down the speciesism here, you can just remove
 the divine curse bit. If you still want a Dark One community to be dependent on
-goods from outside, you can say they on _trade_ more instead of on theft and
+goods from outside, you can say they rely on _trade_ more than on theft and
 mercenary work.
 
 ## The Monsters
@@ -140,4 +142,5 @@ them"). I'll stick to my initial assumptions that these stat blocks represent
 the Dark One equivalent of adventurers and other combatants rather than typical
 members of the culture.
 
-[1]: {{ "/2019/09/16/dark-one.html" | relative_url }}
+[1]: {{ "/projects/mm3-4e" | relative_url }}
+[2]: {{ "/2019/09/16/dark-one.html" | relative_url }}
